test_suite5/ALAN/test_suite/alan-2022-examples/failing/005320_mutation.alan
source WCKSa begin leave u4Y source o4 begin relax end rem t end
